--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.4.1",
+    "@types/source-map-support": "^0.5.10",
+    "@types/ws": "^8.5.14",
     "adonis-preset-ts": "^2.1.0",
     "eslint": "^8.7.0",
     "eslint-config-prettier": "^8.3.0",
@@ -26,17 +28,20 @@
     "@adonisjs/auth": "^5.1.1",
     "@adonisjs/core": "^5.4.2",
     "@adonisjs/hash": "^9.0.3",
-    "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/lucid": "^10.0.0",
     "@adonisjs/repl": "^3.1.8",
     "@adonisjs/session": "^4.0.6",
+    "@adonisjs/websocket": "^1.0.12",
     "jsonwebtoken": "^9.0.2",
     "luxon": "^2.3.0",
     "pg": "^8.13.1",
     "phc-argon2": "^1.1.4",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
+    "socket.io": "^4.8.1",
     "source-map-support": "^0.5.21",
     "sqlite3": "^5.0.2",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "ws": "^8.18.1"
   }
 }
